--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "private": false,
   "type": "module",
   "dependencies": {
+    "@noble/secp256k1": "^2.1.0",
     "@vercel/postgres": "^0.8.0",
     "@xmtp/xmtp-js": "^11.6.3",
+    "date-fns": "^3.6.0",
+    "ethers": "^6.13.0",
     "frames.js": "^0.16.5",
     "next": "^14.1.2",
     "react": "^18.2.0",
@@ -16,6 +19,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "typescript": "^5.3.3"
