--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cSpell.words": ["Based", "Farcaster", "Xmtp"]
+  "cSpell.words": ["Based", "Farcaster", "Xmtp"],
+  "solidity.compileUsingRemoteVersion": "v0.8.24+commit.e11b9ed9"
 }
