Add contract deployment

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "scripts": {
     "dev": "concurrently \"next dev\" \"frames --url http://localhost:3000\"",
     "start": "next start",
+    "preinstall": "cd chain && npm install",
     "build": "next build",
     "lint": "next lint"
   },
