--- a/chain/package.json
+++ b/chain/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
-    "hardhat": "^2.22.5"
+    "hardhat": "^2.22.5",
+    "dotenv": "latest"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2"
