Remove onchain code. Replace with blue check nft

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "cSpell.words": ["Based", "Farcaster", "Xmtp"],
+  "cSpell.words": ["Based", "Farcaster", "sepolia", "Xmtp"],
   "solidity.compileUsingRemoteVersion": "v0.8.24+commit.e11b9ed9"
 }
