--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "dev": "concurrently \"next dev\" \"frames --url http://localhost:3000\"",
     "start": "next start",
+    "postbuild": "ls .next/server/chunks/",
     "build": "next build",
     "lint": "next lint"
   },
