--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "type": "module",
   "dependencies": {
+    "@lens-protocol/client": "^2.3.0",
     "@noble/secp256k1": "^2.1.0",
     "@vercel/postgres": "^0.8.0",
     "@xmtp/xmtp-js": "^11.6.3",
